<resources>
    <string name="app_name">supernoteapp</string>



    <string name="Notes">Notes</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Home">Home</string>
    <string name="Create_new_note">Create new note</string>
    <string name="Save_note">Save note</string>
    <string name="Update_list">Update list</string>
    <string name="Logout">Logout</string>
    <string name="Email">"" Email</string>
    <string name="Password">"" Password</string>
    <string name="Note_saved">Note saved</string>
    <string name="Note_deleted">Note deleted</string>
    <string name="Titelcheck">You need a title!</string>
    <string name="StartTypehere">Write here..</string>
    <string name="Delete">Delete</string>
    <string name="Doyouwanttodelete">Do you really want to delete this note?</string>
    <string name="Deletenote">Delete Note</string>
    <string name="Dontdelete">Back</string>
    <string name="ForgotPassword">Forgot password?</string>
    <string name="Reset">Reset password</string>
    <string name="Welcome">Welcome!</string>
    <string name="Invalid_login">Invalid login!</string>
    <string name="Invalid_registration">Invalid registration!</string>
    <string name="Invalid_email">Email does not exist, please try again!</string>
    <string name="EnterEmail">You need to enter a email adress</string>
    <string name="EnterEmailandPassword">Please enter a email and Password!</string>
    <string name="ResetEmailsuccess">Email sent to reset your password</string>
    <string name="StayConnected">This application needs a internet connection</string>







</resources>